- Fixed ConnectionStatus not having a "Connecting" and "Disconnecting" state