@@ -19,6 +19,7 @@ namespace SpeedrunUtilsV2
             internal static string s_research           = "Previous Research";
             internal static string s_originalTools      = "Original Tools";
             internal static string s_tracker            = "Progress Tracker";
+            internal static string s_tracking           = "Tracking Game Progress";
         }
 
         internal static class Splits
