@@ -1,1 +1,2 @@
 - Fixed ConnectionStatus not having a "Connecting" and "Disconnecting" state
+- Added Game Progress Tracker
